# aki-dev-sync

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: index.md
docs/arch/: logger.md  refresh-controller.md  usage-antigravity.md  usage-claudecode.md
docs/feat/: app-update-check.md  background-refresh.md  drag-and-drop.md  git-operations.md  open-popup.md  project-task-list.md  remote-mode.md  statusline-customizer.md  sync-check-and-usage-switches.md  sync-flow.md  window-presets.md
docs/plan/: 1.18.0-statusline-apply-correctness.md  audit-1.11-1.15.md  claudecode-oauth-usage-p3.md  claudecode-usage-cleanup-FINAL.md  deferred-auto-update.md  fix-claude-flow-24jun.md  improve-jun24.md  investigate-ag-account-switch-detection.md  project-open-menu-hub.md  share-statusline.md  statusline-true-unify.md  total-refactor-by-akirule.md  verify-antigravity-account-stability.md
docs/ref/: antigravity-usage-native-flow.md  (+7 more)
scripts/: check-env.js  force-sync-claudecode.sh  force-sync-parse.py  get-antigravity-usage.js  get-claudecode-usage.sh  lint-remote-scripts.js  post-build.js  provision-claudecode.sh  rename-artifacts.js  sync-version.js  tauri-runner.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_usage.rs  claude_profile.rs  git.rs  global_note.rs  lib.rs  logger.rs  main.rs  projects.rs  ssh.rs  statusline-unified.sh  statusline.rs  sync.rs  system.rs
(+93 files in other folders)
